# rust_c_pointer_experiment

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
gp_c/: gp.c  gp.h  main.c
gp_rs/: gp.rs  main.rs
gp_rs/gp/: Cargo.toml  gp_safe.rs  gp_unsafe.rs
gp_rs/gp_safe/: Cargo.toml  gp_safe.rs
gp_rs/gp_sys/: Cargo.toml  gp_sys.rs
