[package]
name = "gp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gp_safe"
path = "gp_safe.rs"

[[bin]]
name = "gp_unsafe"
path = "gp_unsafe.rs"

[dependencies]
gp_sys = {path="../gp_sys"}
gp_safe = {path="../gp_safe"}
